# 2D-lidar-SLAM

./: .gitignore  2D-lidar-SLAM.launch  README.md  docker-compose.yaml
docker/: Dockerfile
docker/ros-base/: Dockerfile
docker/ros-core/: Dockerfile
map/: CMakeLists.txt  dbscan_test.py  landmarks.yaml  package.xml  ransac_test.py  setup.py  tuning_params.yaml
map/launch/: landmark_parser.launch
map/msg/: Landmark.msg
map/scripts/: landmark_parser.py
planners/: CMakeLists.txt  package.xml  setup.py  square_planner.py
planners/launch/: square_planner.launch
planners/modules/: geometric_trajectories.py  odometric_models.py
planners/scripts/: square_planner.py
